@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: May 7, 2009</p>
+      <p>Last Updated: May 9, 2009</p>
     </td>
   </tr>
 </table>
@@ -1400,6 +1400,8 @@ nuttx-0.4.6 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	  for verifying this.
 	* Began adding support for the MicroMint Eagle100 board.  This board has a
 	  Luminary LM3S6918 Cortex-M3.
+	* Add configuration option to enable fast GPIO (vs. legacy, "slow" GPIO) for
+	  LPC214x.
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
